--- a/van2.html
+++ b/van2.html
@@ -399,7 +399,7 @@ var sentences=
 'oam',
 
 'oap'
-]
+],10
 
 
  ],
@@ -482,9 +482,193 @@ var sentences=
 'quanh',
 'mình.'
 
-     ]
+     ],8
 
+ ],
+
+['van.mp3', 
+   [
+[79,83],
+[37,41],
+[890,891],
+[367,372],
+
+[890,891],
+[187,192],
+[79,83],
+[37,41],
+
+[79,83],
+[37,41],
+[890,891],
+[367,372],
+
+[79,83],
+[37,41],
+[180,184],
+[367,372],
+
+[216,220],
+[890,891],
+[99,103],
+[890,891],
+
+[79,83],
+[37,41],
+[141,146],
+[173,177],
+
+[196,200],
+[421,425],
+[163,166],
+[890,891],
+
+[79,83],
+[37,41],
+[890,891],
+[448,451],
+
+[890,891],
+[890,891],
+[223,228],
+[159,163],
+
+[890,891],
+[204,208],
+[890,891],
+[127,131],
+
+[349,354],
+[212,216],
+[53,57],
+[91,95],
+
+[890,891],
+[159,163],
+[173,177],
+[91,95],
+
+[180,184],
+[326,330],
+[79,83],
+[890,891],
+
+[67,70],
+[67,70],
+[233,236],
+[890,891],
+
+[216,220],
+[216,220],
+[890,891],
+[37,41],
+
+[173,177],
+[79,83],
+[890,891],
+[53,57],
+
+[890,891],
+[212,216],
+[890,891],
+[890,891],
+
+[491,495],
+[482,486],
+[204,208]
+   ], 'Bài thơ',
+    [
+     'Lời',
+'chào',
+'đi',
+'trước',
+
+'Đi',
+'đến',
+'nơi',
+'nào',
+
+'Lời',
+'chào',
+'đi',
+'trước',
+
+'Lời',
+'chào',
+'dẫn',
+'bước',
+
+'Chẳng',
+'sợ',
+'lạc',
+'nhà',
+
+'Lời',
+'chào',
+'kết',
+'bạn',
+
+'Con',
+'đường',
+'bớt',
+'xa',
+
+'Lời',
+'chào',
+'là',
+'hoa',
+
+'Nở',
+'từ',
+'lòng',
+'tốt',
+
+'Là',
+'cơn',
+'gió',
+'mát',
+
+'Buổi',
+'sáng',
+'đầu',
+'ngày',
+
+'Như',
+'một',
+'bàn',
+'tay',
+
+'Chân',
+'thành',
+'cởi',
+'mở',
+
+'Ai',
+'ai',
+'cũng',
+'có',
+
+'Chẳng',
+'nặng',
+'là',
+'bao',
+
+'Bạn',
+'ơi,',
+'đi',
+'đâu',
+
+'Nhớ',
+'mang',
+'đi',
+'nhé!',
+
+'Nguyễn',
+'Hoàng',
+'Sơn'
+     ],4
  ]
+
 ];
 
 let video_index = 0;
@@ -552,7 +736,8 @@ function showWords(myVid_index){
   // Clear the existing table content
   table.innerHTML = '';
   var words=sentences[myVid_index][3];
-  table.innerHTML= arr2tbl(10, words);
+  var noOfWordsPerRow=sentences[myVid_index][4];
+  table.innerHTML= arr2tbl(noOfWordsPerRow, words);
 
 }
 
