--- a/van2.html
+++ b/van2.html
@@ -667,6 +667,131 @@ var sentences=
 'Hoàng',
 'Sơn'
      ],4
+ ],
+['van.mp3', 
+   [
+      [91,95],
+[33,37],
+[890,891],
+[67,70],
+[890,891],
+[230,233],
+[41,45],
+[230,233],
+[134,138],
+[396,399],
+[326,330],
+[159,163],
+[233,236],
+[254,258],
+[890,891],
+[236,240],
+[67,70],
+[67,70],
+[230,233],
+[890,891],
+[196,200],
+[159,163],
+[275,278],
+[354,358],
+[890,891],
+[890,891],
+[230,233],
+[192,196],
+[95,99],
+[159,163],
+[67,70],
+[890,891],
+[33,37],
+[95,99],
+[367,372],
+[890,891],
+[236,240],
+[187,192],
+[417,421],
+[45,49],
+[890,891],
+[890,891],
+[396,399],
+[890,891],
+[67,70],
+[890,891],
+[333,337],
+[890,891],
+[159,163],
+[33,37],
+[890,891],
+[230,233],
+[91,95],
+[230,233],
+[180,184],
+[196,200],
+[890,891],
+[890,891],
+[33,37]
+
+   ], 'Truyện Cổ Tích Sọ Dừa',
+    [
+       'Ngày',
+'xưa',
+'có',
+'hai',
+'vợ',
+'chồng',
+'nghèo',
+'sống',
+'rất',
+'hiền',
+'lành,',
+'tốt',
+'bụng,',
+'chăm',
+'chỉ',
+'nhưng',
+'lại',
+'mãi',
+'không',
+'có',
+'con.',
+'Một',
+'hôm',
+'người',
+'vợ',
+'ra',
+'đồng',
+'nhìn',
+'thấy',
+'một',
+'cái',
+'sọ',
+'dừa',
+'đầy',
+'nước',
+'thì',
+'bưng',
+'lên',
+'uống,',
+'sau',
+'đó',
+'thì',
+'liền',
+'có',
+'thai',
+'và',
+'sinh',
+'ra',
+'một',
+'đứa',
+'trẻ',
+'không',
+'tay',
+'không',
+'chân',
+'tròn',
+'như',
+'quả',
+'dừa.'
+     ],8
  ]
 
 ];
