--- a/van2.html
+++ b/van2.html
@@ -924,7 +924,7 @@ function myLoop(){
     time_index++;
     if (time_index >= sentences[video_index][1].length) {
       time_index = 0;
-      video_index++;    
+      //video_index++;    
     }
     
   }
