--- a/van2.html
+++ b/van2.html
@@ -728,7 +728,71 @@ var sentences=
 [196,200],
 [890,891],
 [890,891],
-[33,37]
+[33,37],
+
+[45,49],
+[890,891],
+[204,208],
+[187,192],
+[890,891],
+[33,37],
+[177,180],
+[890,891],
+[890,891],
+[890,891],
+[230,233],
+[67,70],
+[890,891],
+[196,200],
+[67,70],
+[204,208],
+[29,33],
+[890,891],
+[230,233],
+[402,406],
+[131,134],
+[83,87],
+[890,891],
+[33,37],
+[456,459],
+[890,891],
+[890,891],
+[196,200],
+[67,70],
+[166,170],
+[402,406],
+[75,79],
+[67,70],
+[159,163],
+[79,83],
+[53,57],
+[890,891],
+[262,265],
+[223,228],
+[345,349],
+[890,891],
+[33,37],
+[890,891],
+[33,37],
+[890,891],
+[890,891],
+[187,192],
+[70,75],
+[890,891],
+[890,891],
+[354,358],
+[367,372],
+[890,891],
+[166,170],
+[396,399],
+[491,495],
+[333,337],
+[890,891],
+[53,57],
+[326,330],
+[396,399],
+[486,491],
+[890,891]     
 
    ], 'Truyện Cổ Tích Sọ Dừa',
     [
@@ -790,7 +854,75 @@ var sentences=
 'tròn',
 'như',
 'quả',
-'dừa.'
+'dừa.',
+
+ 
+'Sau',
+'khi',
+'lớn',
+'lên',
+'Sọ',
+'Dừa',
+'chăn',
+'bò',
+'cho',
+'phú',
+'ông,',
+'hai',
+'cô',
+'con',
+'gái',
+'lớn',
+'của',
+'phú',
+'ông',
+'luôn',
+'hắt',
+'hủi',
+'Sọ',
+'Dừa,',
+'duy',
+'chỉ',
+'cô',
+'con',
+'gái',
+'út',
+'luôn',
+'đối',
+'đãi',
+'tốt',
+'với',
+'cậu',
+'và',
+'đem',
+'lòng',
+'yêu',
+'Sọ',
+'Dừa.',
+'Sọ',
+'Dừa',
+'nhờ',
+'mẹ',
+'đến',
+'hỏi',
+'vợ',
+'và',
+'cưới',
+'được',
+'cô',
+'út,',
+'hiện',
+'nguyên',
+'hình',
+'là',
+'cậu',
+'thanh',
+'niên',
+'tuấn',
+'tú.'
+     
+
+      
      ],8
  ]
 
