--- a/van2.html
+++ b/van2.html
@@ -924,7 +924,175 @@ var sentences=
 
       
      ],8
+ ],
+['van.mp3', 
+   [
+      [24,29],
+[24,29],
+[24,29],
+[24,29],
+[24,29],
+[24,29],
+[24,29],
+[24,29],
+[29,33],
+[29,33],
+[29,33],
+[29,33],
+[29,33],
+[29,33],
+[29,33],
+[29,33],
+[33,37],
+[33,37],
+[33,37],
+[33,37],
+[33,37],
+[33,37],
+[33,37],
+[33,37],
+[37,41],
+[37,41],
+[37,41],
+[37,41],
+[37,41],
+[37,41],
+[37,41],
+[37,41],
+[41,45],
+[41,45],
+[41,45],
+[41,45],
+[41,45],
+[41,45],
+[41,45],
+[41,45],
+[45,49],
+[45,49],
+[45,49],
+[45,49],
+[45,49],
+[45,49],
+[45,49],
+[45,49],
+[49,53],
+[49,53],
+[49,53],
+[49,53],
+[49,53],
+[49,53],
+[49,53],
+[49,53],
+[53,57],
+[53,57],
+[53,57],
+[53,57],
+[53,57],
+[53,57],
+[53,57],
+[53,57],
+[57,61],
+[57,61],
+[57,61],
+[57,61],
+[57,61],
+[57,61],
+[57,61],
+[57,61],
+[61,64],
+[61,64],
+[61,64],
+[61,64],
+[61,64],
+[61,64],
+[61,64],
+[61,64]
+   ], 'Vần Phổ Biến 1',
+    [
+       'bịa',
+'chĩa',
+'dĩa',
+'địa',
+'kìa',
+'khía',
+'phía',
+'tía',
+'bùa',
+'của',
+'chúa',
+'giụa',
+'hùa',
+'khua',
+'múa',
+'túa',
+'bựa',
+'cửa',
+'chứa',
+'dừa',
+'đứa',
+'giữa',
+'hứa',
+'mưa',
+'áo',
+'bão',
+'cạo',
+'cháo',
+'đào',
+'gạo',
+'giáo',
+'ngạo',
+'bẹo',
+'chéo',
+'dẻo',
+'đẽo',
+'giẹo',
+'kéo',
+'khéo',
+'léo',
+'bảu',
+'cảu',
+'cháu',
+'đáu',
+'giảu',
+'háu',
+'láu',
+'máu',
+'bệu',
+'đểu',
+'kêu',
+'nếu',
+'nghêu',
+'sếu',
+'tếu',
+'thêu',
+'ẩu',
+'bầu',
+'cầu',
+'chấu',
+'dẫu',
+'gấu',
+'giấu',
+'hậu',
+'bĩu',
+'chịu',
+'địu',
+'hiu',
+'líu',
+'míu',
+'tịu',
+'thiu',
+'bưu',
+'cựu',
+'hữu',
+'mưu',
+'sửu',
+'tựu',
+'ngưu',
+'lựu'
+
+     ],8
  ]
+
 
 ];
 
