--- a/van2.html
+++ b/van2.html
@@ -1091,7 +1091,143 @@ var sentences=
 'lựu'
 
      ],8
+ ],
+['van.mp3', 
+   [
+     [67,70],
+[67,70],
+[67,70],
+[67,70],
+[67,70],
+[67,70],
+[67,70],
+[67,70],
+[70,75],
+[70,75],
+[70,75],
+[70,75],
+[70,75],
+[70,75],
+[70,75],
+[70,75],
+[75,79],
+[75,79],
+[75,79],
+[75,79],
+[75,79],
+[75,79],
+[75,79],
+[75,79],
+[79,83],
+[79,83],
+[79,83],
+[79,83],
+[79,83],
+[79,83],
+[79,83],
+[79,83],
+[83,87],
+[83,87],
+[83,87],
+[83,87],
+[83,87],
+[83,87],
+[83,87],
+[83,87],
+[87,91],
+[87,91],
+[87,91],
+[87,91],
+[87,91],
+[87,91],
+[87,91],
+[87,91],
+[91,95],
+[91,95],
+[91,95],
+[91,95],
+[91,95],
+[91,95],
+[91,95],
+[91,95],
+[95,99],
+[95,99],
+[95,99],
+[95,99],
+[95,99],
+[95,99],
+[95,99],
+[95,99]
+   ], 'Vần Phổ Biến 2',
+    [
+      'ái',
+'bài',
+'cãi',
+'chải',
+'dải',
+'đái',
+'gái',
+'khái',
+'bói',
+'còi',
+'chọi',
+'dõi',
+'đói',
+'gọi',
+'giói',
+'khói',
+'bôi',
+'cối',
+'chối',
+'dối',
+'khối',
+'lồi',
+'mồi',
+'nồi',
+'đợi',
+'gởi',
+'giới',
+'hởi',
+'khởi',
+'ngợi',
+'nhời',
+'phới',
+'gụi',
+'giụi',
+'húi',
+'khui',
+'núi',
+'nhúi',
+'phủi',
+'rủi',
+'cửi',
+'chửi',
+'gửi',
+'ngửi',
+'cửi trần',
+'chửi thề',
+'gửi thư',
+'ngửi mùi',
+'bay',
+'cày',
+'cháy',
+'gáy',
+'phảy',
+'ráy',
+'thảy',
+'xáy',
+'bậy',
+'chấy',
+'dậy',
+'lầy',
+'mây',
+'ngậy',
+'nhậy',
+'trẩy'
+
+     ],8
  ]
+
 
 
 ];
