--- a/van2.html
+++ b/van2.html
@@ -1226,6 +1226,125 @@ var sentences=
 'trẩy'
 
      ],8
+ ],
+['van.mp3', 
+   [
+     [99,103],
+[99,103],
+[99,103],
+[99,103],
+[99,103],
+[99,103],
+[99,103],
+[99,103],
+[103,107],
+[103,107],
+[103,107],
+[103,107],
+[103,107],
+[103,107],
+[103,107],
+[103,107],
+[109,113],
+[109,113],
+[109,113],
+[109,113],
+[109,113],
+[109,113],
+[109,113],
+[109,113],
+[113,117],
+[113,117],
+[113,117],
+[113,117],
+[113,117],
+[113,117],
+[113,117],
+[113,117],
+[117,120],
+[117,120],
+[117,120],
+[117,120],
+[117,120],
+[117,120],
+[117,120],
+[117,120],
+[120,123],
+[120,123],
+[120,123],
+[120,123],
+[120,123],
+[120,123],
+[120,123],
+[120,123],
+[123,127],
+[123,127],
+[123,127],
+[123,127],
+[123,127],
+[123,127],
+[123,127],
+[123,127]
+   ], 'Vần Phổ Biến 3',
+    [
+    'ác',
+'đạc',
+'gạc',
+'giác',
+'hạc',
+'khạc',
+'ngạc',
+'nhạc',
+'bậc',
+'chậc',
+'gấc',
+'giấc',
+'khấc',
+'ngấc',
+'nhấc',
+'xấc',
+'ặc',
+'bắc',
+'chắc',
+'đặc',
+'giặc',
+'khắc',
+'nhắc',
+'vặc',
+'bóc',
+'chọc',
+'dóc',
+'đọc',
+'góc',
+'học',
+'khóc',
+'nhọc',
+'chốc',
+'gốc',
+'khốc',
+'ngốc',
+'sốc',
+'tộc',
+'vốc',
+'xốc',
+'cục',
+'chúc',
+'đúc',
+'gục',
+'giục',
+'khúc',
+'nhúc',
+'phúc',
+'bực',
+'chức',
+'mực',
+'nức',
+'ngực',
+'nhức',
+'phức',
+'thức'
+
+     ],8
  ]
 
 
