--- a/van2.html
+++ b/van2.html
@@ -1345,6 +1345,92 @@ var sentences=
 'thức'
 
      ],8
+ ],
+['van.mp3', 
+   [
+     [127,131],
+[127,131],
+[127,131],
+[127,131],
+[127,131],
+[127,131],
+[127,131],
+[127,131],
+[131,134],
+[131,134],
+[131,134],
+[131,134],
+[131,134],
+[131,134],
+[131,134],
+[131,134],
+[134,138],
+[134,138],
+[134,138],
+[134,138],
+[134,138],
+[134,138],
+[134,138],
+[134,138],
+[138,141],
+[138,141],
+[138,141],
+[138,141],
+[138,141],
+[138,141],
+[138,141],
+[138,141],
+[141,146],
+[141,146],
+[141,146],
+[141,146],
+[141,146],
+[141,146],
+[141,146],
+[141,146]
+   ], 'Vần Phổ Biến 4',
+    [
+'chát',
+'gạt',
+'giát',
+'khát',
+'ngạt',
+'nhát',
+'phạt',
+'quạt',
+'chặt',
+'đặt',
+'gặt',
+'giắt',
+'ngắt',
+'nhặt',
+'thắt',
+'vặt',
+'dật',
+'gật',
+'giật',
+'hất',
+'ngất',
+'nhất',
+'phất',
+'quất',
+'ghét',
+'khét',
+'lét',
+'mét',
+'nghẹt',
+'nhét',
+'quẹt',
+'thét',
+'chết',
+'phết',
+'quệt',
+'rệt',
+'sệt',
+'thết',
+'trệt',
+'vệt'
+     ],8
  ]
 
 
