--- a/van2.html
+++ b/van2.html
@@ -1431,6 +1431,108 @@ var sentences=
 'trệt',
 'vệt'
      ],8
+ ],
+['van.mp3', 
+   [
+     [151,155],
+[151,155],
+[151,155],
+[151,155],
+[151,155],
+[151,155],
+[151,155],
+[151,155],
+[155,159],
+[155,159],
+[155,159],
+[155,159],
+[155,159],
+[155,159],
+[155,159],
+[155,159],
+[159,163],
+[159,163],
+[159,163],
+[159,163],
+[159,163],
+[159,163],
+[159,163],
+[159,163],
+[163,166],
+[163,166],
+[163,166],
+[163,166],
+[163,166],
+[163,166],
+[163,166],
+[163,166],
+[166,170],
+[166,170],
+[166,170],
+[166,170],
+[166,170],
+[166,170],
+[166,170],
+[166,170],
+[170,173],
+[170,173],
+[170,173],
+[170,173],
+[170,173],
+[170,173],
+[170,173],
+[170,173]
+   ], 'Vần Phổ Biến 5',
+    [
+'bịt',
+'chít',
+'hít',
+'kịt',
+'khít',
+'mít',
+'rít',
+'thịt',
+'chót',
+'gọt',
+'giọt',
+'ngọt',
+'nhọt',
+'sọt',
+'thọt',
+'trót',
+'bột',
+'hốt',
+'mốt',
+'nốt',
+'ngột',
+'nhột',
+'phốt',
+'thốt',
+'đợt',
+'ngớt',
+'nhớt',
+'ợt',
+'phớt',
+'thớt',
+'trợt',
+'vớt',
+'bút',
+'chút',
+'đút',
+'gút',
+'ngụt',
+'nhút',
+'phút',
+'thụt',
+'cứt',
+'đứt',
+'giựt',
+'ngứt',
+'nhựt',
+'sứt',
+'sứt',
+'vứt'
+     ],8
  ]
 
 
