--- a/van2.html
+++ b/van2.html
@@ -1533,7 +1533,174 @@ var sentences=
 'sứt',
 'vứt'
      ],8
+ ],
+['van.mp3', 
+   [
+    [173,177],
+[173,177],
+[173,177],
+[173,177],
+[173,177],
+[173,177],
+[173,177],
+[173,177],
+[177,180],
+[177,180],
+[177,180],
+[177,180],
+[177,180],
+[177,180],
+[177,180],
+[177,180],
+[180,184],
+[180,184],
+[180,184],
+[180,184],
+[180,184],
+[180,184],
+[180,184],
+[180,184],
+[184,187],
+[184,187],
+[184,187],
+[184,187],
+[184,187],
+[184,187],
+[184,187],
+[184,187],
+[187,192],
+[187,192],
+[187,192],
+[187,192],
+[187,192],
+[187,192],
+[187,192],
+[187,192],
+[192,196],
+[192,196],
+[192,196],
+[192,196],
+[192,196],
+[192,196],
+[192,196],
+[192,196],
+[196,200],
+[196,200],
+[196,200],
+[196,200],
+[196,200],
+[196,200],
+[196,200],
+[196,200],
+[200,204],
+[200,204],
+[200,204],
+[200,204],
+[200,204],
+[200,204],
+[200,204],
+[200,204],
+[204,208],
+[204,208],
+[204,208],
+[204,208],
+[204,208],
+[204,208],
+[204,208],
+[204,208],
+[208,212],
+[208,212],
+[208,212],
+[208,212],
+[208,212],
+[208,212],
+[208,212],
+[208,212]
+   ], 'Vần Phổ Biến 6',
+    [
+'bàn',
+'chán',
+'dạn',
+'đạn',
+'gán',
+'giản',
+'khán',
+'ngàn',
+'khăn',
+'mặn',
+'nặn',
+'ngắn',
+'nhằn',
+'quằn',
+'rặn',
+'vặn',
+'cận',
+'chẩn',
+'dần',
+'gần',
+'giận',
+'khấn',
+'ngấn',
+'quận',
+'chén',
+'đèn',
+'ghèn',
+'gien',
+'kèn',
+'khen',
+'nghẽn',
+'quen',
+'bện',
+'mến',
+'quên',
+'rện',
+'sến',
+'tên',
+'trên',
+'vền',
+'chín',
+'din',
+'gin',
+'kín',
+'mịn',
+'nín',
+'nghìn',
+'nhìn',
+'chọn',
+'dọn',
+'giỏn',
+'nõn',
+'ngon',
+'nhón',
+'thon',
+'tròn',
+'bồn',
+'chốn',
+'gôn',
+'hồn',
+'khốn',
+'ngốn',
+'nhổn',
+'phôn',
+'giỡn',
+'lớn',
+'nhờn',
+'ớn',
+'phỡn',
+'tởn',
+'trợn',
+'vờn',
+'bún',
+'chũn',
+'đùn',
+'giun',
+'nhủn',
+'phùn',
+'thun',
+'vụn'
+     ],8
  ]
+
 
 
 
