--- a/van2.html
+++ b/van2.html
@@ -1699,7 +1699,154 @@ var sentences=
 'thun',
 'vụn'
      ],8
+ ],
+['van.mp3', 
+   [
+   [212,216],
+[212,216],
+[212,216],
+[212,216],
+[212,216],
+[212,216],
+[212,216],
+[212,216],
+[212,216],
+[212,216],
+[216,220],
+[216,220],
+[216,220],
+[216,220],
+[216,220],
+[216,220],
+[216,220],
+[216,220],
+[216,220],
+[216,220],
+[220,223],
+[220,223],
+[220,223],
+[220,223],
+[220,223],
+[220,223],
+[220,223],
+[220,223],
+[220,223],
+[220,223],
+[223,228],
+[223,228],
+[223,228],
+[223,228],
+[223,228],
+[223,228],
+[223,228],
+[223,228],
+[223,228],
+[223,228],
+[230,233],
+[230,233],
+[230,233],
+[230,233],
+[230,233],
+[230,233],
+[230,233],
+[230,233],
+[230,233],
+[230,233],
+[233,236],
+[233,236],
+[233,236],
+[233,236],
+[233,236],
+[233,236],
+[233,236],
+[233,236],
+[233,236],
+[233,236],
+[236,240],
+[236,240],
+[236,240],
+[236,240],
+[236,240],
+[236,240],
+[236,240],
+[236,240],
+[236,240],
+[236,240]
+   ], 'Vần Phổ Biến 7',
+    [
+'áng',
+'chàng',
+'dạng',
+'đảng',
+'gàng',
+'giáng',
+'hãng',
+'kháng',
+'nạng',
+'ngáng',
+'bằng',
+'cẳng',
+'chẳng',
+'đắng',
+'gắng',
+'giằng',
+'khẳng',
+'lắng',
+'nhằng',
+'phẳng',
+'bâng',
+'cẫng',
+'dâng',
+'đấng',
+'lâng',
+'nẫng',
+'ngẩng',
+'quầng',
+'tầng',
+'vầng',
+'bỏng',
+'chóng',
+'dỏng',
+'đóng',
+'gọng',
+'giọng',
+'ngọng',
+'nhong',
+'phóng',
+'tròng',
+'chống',
+'động',
+'gồng',
+'giống',
+'hổng',
+'khổng',
+'mộng',
+'ngông',
+'phồng',
+'thống',
+'cụng',
+'chúng',
+'húng',
+'khùng',
+'lủng',
+'ngùng',
+'nhung',
+'phung',
+'thúng',
+'trúng',
+'cứng',
+'chừng',
+'dừng',
+'đứng',
+'gừng',
+'hứng',
+'mửng',
+'ngừng',
+'những',
+'thừng'
+     ],8
  ]
+
 
 
 
