--- a/van2.html
+++ b/van2.html
@@ -1916,8 +1916,8 @@ function arr2tbl(ncols, words){
 function showWords(myVid_index){
   var myTableTitle=document.getElementById("tableTitle");
   myTableTitle.innerHTML =sentences[myVid_index][2];
-  myTableTitle.style.fontSize = "x-large";
-  myTableTitle.style.fontWeight ="bold";
+  //myTableTitle.style.fontSize = "x-large";
+  //myTableTitle.style.fontWeight ="bold";
   
   var table = document.getElementById('wordTable');
   // Clear the existing table content
@@ -2056,7 +2056,7 @@ function unhideVideo() {
 </script>
 </head>
 <body onload="listVideos()">
-<p id="tableTitle"></p>
+<h1 id="tableTitle"></h1>
   
 <table id="wordTable" style="font-size:30px">
 </table>
