--- a/van2.html
+++ b/van2.html
@@ -1845,7 +1845,74 @@ var sentences=
 'những',
 'thừng'
      ],10
+ ],
+['van.mp3', 
+   [
+  [240,244],
+[240,244],
+[240,244],
+[240,244],
+[240,244],
+[240,244],
+[240,244],
+[240,244],
+[240,244],
+[240,244],
+[244,247],
+[244,247],
+[244,247],
+[244,247],
+[244,247],
+[244,247],
+[244,247],
+[244,247],
+[244,247],
+[244,247],
+[247,251],
+[247,251],
+[247,251],
+[247,251],
+[247,251],
+[247,251],
+[247,251],
+[247,251],
+[247,251],
+[247,251]
+   ], 'Vần Phổ Biến 8',
+    [
+'cách',
+'đách',
+'gạch',
+'hạch',
+'khách',
+'ngách',
+'phách',
+'sạch',
+'thạch',
+'trách',
+'chệch',
+'đếch',
+'ếch',
+'hếch',
+'kệch',
+'nghệch',
+'nhếch',
+'thếch',
+'trệch',
+'xếch',
+'chích',
+'địch',
+'hịch',
+'kịch',
+'khích',
+'lịch',
+'nghịch',
+'nhích',
+'phích',
+'thích'
+     ],10
  ]
+
 
 
 
