--- a/van2.html
+++ b/van2.html
@@ -1911,7 +1911,214 @@ var sentences=
 'phích',
 'thích'
      ],10
+ ],
+['van.mp3', 
+   [
+ [251,254],
+[251,254],
+[251,254],
+[251,254],
+[251,254],
+[251,254],
+[251,254],
+[251,254],
+[251,254],
+[251,254],
+[254,258],
+[254,258],
+[254,258],
+[254,258],
+[254,258],
+[254,258],
+[254,258],
+[254,258],
+[254,258],
+[254,258],
+[258,262],
+[258,262],
+[258,262],
+[258,262],
+[258,262],
+[258,262],
+[258,262],
+[258,262],
+[258,262],
+[258,262],
+[262,265],
+[262,265],
+[262,265],
+[262,265],
+[262,265],
+[262,265],
+[262,265],
+[262,265],
+[262,265],
+[262,265],
+[267,271],
+[267,271],
+[267,271],
+[267,271],
+[267,271],
+[267,271],
+[267,271],
+[267,271],
+[267,271],
+[267,271],
+[271,275],
+[271,275],
+[271,275],
+[271,275],
+[271,275],
+[271,275],
+[271,275],
+[271,275],
+[271,275],
+[271,275],
+[275,278],
+[275,278],
+[275,278],
+[275,278],
+[275,278],
+[275,278],
+[275,278],
+[275,278],
+[275,278],
+[275,278],
+[278,282],
+[278,282],
+[278,282],
+[278,282],
+[278,282],
+[278,282],
+[278,282],
+[278,282],
+[278,282],
+[278,282],
+[282,285],
+[282,285],
+[282,285],
+[282,285],
+[282,285],
+[282,285],
+[282,285],
+[282,285],
+[282,285],
+[282,285],
+[285,289],
+[285,289],
+[285,289],
+[285,289],
+[285,289],
+[285,289],
+[285,289],
+[285,289],
+[285,289],
+[285,289]
+   ], 'Vần Phổ Biến 9',
+    [
+'cảm',
+'chạm',
+'đám',
+'gam',
+'giảm',
+'hàm',
+'khảm',
+'nhám',
+'phạm',
+'tham',
+'cằm',
+'chăm',
+'mắm',
+'nằm',
+'ngắm',
+'nhắm',
+'quặm',
+'tắm',
+'thẳm',
+'trăm',
+'bầm',
+'chậm',
+'dấm',
+'đầm',
+'gậm',
+'giậm',
+'khâm',
+'ngẫm',
+'nhậm',
+'phẩm',
+'bèm',
+'chém',
+'đem',
+'ghém',
+'gièm',
+'hẻm',
+'nhèm',
+'tém',
+'thèm',
+'xem',
+'chêm',
+'đếm',
+'ếm',
+'kềm',
+'mềm',
+'nệm',
+'rêm',
+'têm',
+'thềm',
+'xềm',
+'chỏm',
+'dỏm',
+'đóm',
+'gom',
+'hòm',
+'khóm',
+'mõm',
+'nom',
+'ngòm',
+'nhòm',
+'cộm',
+'chồm',
+'dổm',
+'đốm',
+'đốm',
+'mồm',
+'nhôm',
+'rôm',
+'trộm',
+'xồm',
+'bợm',
+'cớm',
+'chớm',
+'đờm',
+'gớm',
+'hợm',
+'ngợm',
+'sớm',
+'tởm',
+'thơm',
+'bỉm',
+'chìm',
+'ghìm',
+'ỉm',
+'kìm',
+'mỉm',
+'nghỉm',
+'nhím',
+'phím',
+'thím',
+'cúm',
+'chùm',
+'giùm',
+'khúm',
+'ngụm',
+'nhúm',
+'phum',
+'túm',
+'thủm',
+'trùm'
+     ],10
  ]
+
 
 
 
