--- a/van2.html
+++ b/van2.html
@@ -2117,6 +2117,212 @@ var sentences=
 'thủm',
 'trùm'
      ],10
+ ],
+['van.mp3', 
+   [
+[289,292],
+[289,292],
+[289,292],
+[289,292],
+[289,292],
+[289,292],
+[289,292],
+[289,292],
+[289,292],
+[289,292],
+[292,296],
+[292,296],
+[292,296],
+[292,296],
+[292,296],
+[292,296],
+[292,296],
+[292,296],
+[292,296],
+[292,296],
+[296,300],
+[296,300],
+[296,300],
+[296,300],
+[296,300],
+[296,300],
+[296,300],
+[296,300],
+[296,300],
+[296,300],
+[300,304],
+[300,304],
+[300,304],
+[300,304],
+[300,304],
+[300,304],
+[300,304],
+[300,304],
+[300,304],
+[300,304],
+[307,310],
+[307,310],
+[307,310],
+[307,310],
+[307,310],
+[307,310],
+[307,310],
+[307,310],
+[307,310],
+[307,310],
+[310,313],
+[310,313],
+[310,313],
+[310,313],
+[310,313],
+[310,313],
+[310,313],
+[310,313],
+[310,313],
+[310,313],
+[313,317],
+[313,317],
+[313,317],
+[313,317],
+[313,317],
+[313,317],
+[313,317],
+[313,317],
+[313,317],
+[313,317],
+[317,320],
+[317,320],
+[317,320],
+[317,320],
+[317,320],
+[317,320],
+[317,320],
+[317,320],
+[317,320],
+[317,320],
+[320,323],
+[320,323],
+[320,323],
+[320,323],
+[320,323],
+[320,323],
+[320,323],
+[320,323],
+[320,323],
+[320,323],
+[323,326],
+[323,326],
+[323,326],
+[323,326],
+[323,326],
+[323,326],
+[323,326],
+[323,326],
+[323,326],
+[323,326]
+   ], 'Vần Phổ Biến 10',
+    [
+'cáp',
+'chạp',
+'đáp',
+'gáp',
+'giáp',
+'hạp',
+'ngáp',
+'nháp',
+'pháp',
+'tháp',
+'bắp',
+'cắp',
+'chắp',
+'đắp',
+'gắp',
+'khắp',
+'lắp',
+'nắp',
+'quắp',
+'thắp',
+'bập',
+'cập',
+'chập',
+'dập',
+'đập',
+'gập',
+'giập',
+'hập',
+'khập',
+'lập',
+'bép',
+'chép',
+'dép',
+'ghép',
+'khép',
+'mép',
+'nhép',
+'phép',
+'tép',
+'thép',
+'bếp',
+'đệp',
+'kếp',
+'nếp',
+'rệp',
+'sếp',
+'tệp',
+'thếp',
+'xếp',
+'xệp',
+'bóp',
+'cọp',
+'chóp',
+'góp',
+'mọp',
+'ngóp',
+'tóp',
+'thóp',
+'vọp',
+'xọp',
+'bộp',
+'cộp',
+'chộp',
+'độp',
+'gộp',
+'giộp',
+'hộp',
+'lốp',
+'nộp',
+'ngộp',
+'bớp',
+'chớp',
+'dớp',
+'đớp',
+'hớp',
+'khớp',
+'lớp',
+'nớp',
+'ngớp',
+'nhớp',
+'bịp',
+'chíp',
+'dịp',
+'híp',
+'kịp',
+'míp',
+'níp',
+'nhịp',
+'rịp',
+'típ',
+'bụp',
+'cúp',
+'chụp',
+'giúp',
+'húp',
+'múp',
+'núp',
+'ngụp',
+'súp',
+'thụp'
+     ],10
  ]
 
 
