--- a/van2.html
+++ b/van2.html
@@ -2323,7 +2323,74 @@ var sentences=
 'súp',
 'thụp'
      ],10
+ ],
+['van.mp3', 
+   [
+[326,330],
+[326,330],
+[326,330],
+[326,330],
+[326,330],
+[326,330],
+[326,330],
+[326,330],
+[326,330],
+[326,330],
+[330,333],
+[330,333],
+[330,333],
+[330,333],
+[330,333],
+[330,333],
+[330,333],
+[330,333],
+[330,333],
+[330,333],
+[333,337],
+[333,337],
+[333,337],
+[333,337],
+[333,337],
+[333,337],
+[333,337],
+[333,337],
+[333,337],
+[333,337]
+   ], 'Vần Phổ Biến 11',
+    [
+'ảnh',
+'bánh',
+'chảnh',
+'dành',
+'giành',
+'hạnh',
+'khánh',
+'ngành',
+'nhảnh',
+'quanh',
+'bệnh',
+'chênh',
+'đênh',
+'ghềnh',
+'kênh',
+'lệnh',
+'mệnh',
+'nghênh',
+'thênh',
+'vểnh',
+'bình',
+'chính',
+'hình',
+'kính',
+'khinh',
+'lính',
+'phình',
+'tình',
+'thính',
+'trình'
+     ],10
  ]
+
 
 
 
