--- a/van2.html
+++ b/van2.html
@@ -2389,7 +2389,74 @@ var sentences=
 'thính',
 'trình'
      ],10
+ ],
+['van.mp3', 
+   [
+[337,341],
+[337,341],
+[337,341],
+[337,341],
+[337,341],
+[337,341],
+[337,341],
+[337,341],
+[337,341],
+[337,341],
+[341,345],
+[341,345],
+[341,345],
+[341,345],
+[341,345],
+[341,345],
+[341,345],
+[341,345],
+[341,345],
+[341,345],
+[345,349],
+[345,349],
+[345,349],
+[345,349],
+[345,349],
+[345,349],
+[345,349],
+[345,349],
+[345,349],
+[345,349]
+   ], 'Vần Phổ Biến 12',
+    [
+'bươu',
+'bướu',
+'hươu',
+'con hươu',
+'khướu',
+'mưỡu',
+'nướu',
+'rượu',
+'say rượu',
+'tườu',
+'biếu',
+'chiều',
+'diều',
+'điều',
+'giễu',
+'kiểu',
+'khiếu',
+'nhiều',
+'thiếu',
+'triều',
+'yêu',
+'tình yêu',
+'yêu dấu',
+'yểu',
+'chết yểu',
+'yểu điệu',
+'yếu',
+'yếu tố',
+'chủ yếu',
+'cơ yếu'
+     ],10
  ]
+
 
 
 
