--- a/van2.html
+++ b/van2.html
@@ -2455,6 +2455,112 @@ var sentences=
 'chủ yếu',
 'cơ yếu'
      ],10
+ ],
+['van.mp3', 
+   [
+[349,354],
+[349,354],
+[349,354],
+[349,354],
+[349,354],
+[349,354],
+[349,354],
+[349,354],
+[349,354],
+[349,354],
+[354,358],
+[354,358],
+[354,358],
+[354,358],
+[354,358],
+[354,358],
+[354,358],
+[354,358],
+[354,358],
+[354,358],
+[358,362],
+[358,362],
+[358,362],
+[358,362],
+[358,362],
+[358,362],
+[358,362],
+[358,362],
+[358,362],
+[358,362],
+[362,367],
+[362,367],
+[362,367],
+[362,367],
+[362,367],
+[362,367],
+[362,367],
+[362,367],
+[362,367],
+[362,367],
+[367,372],
+[367,372],
+[367,372],
+[367,372],
+[367,372],
+[367,372],
+[367,372],
+[367,372],
+[367,372],
+[367,372]
+   ], 'Vần Phổ Biến 13',
+    [
+'buổi',
+'cuội',
+'chuối',
+'đuổi',
+'muỗi',
+'nuôi',
+'nguôi',
+'ruồi',
+'suối',
+'tuổi',
+'bưởi',
+'cười',
+'dưới',
+'lười',
+'mười',
+'người',
+'rưỡi',
+'sưởi',
+'tưới',
+'thưỡi',
+'biếc',
+'chiếc',
+'diếc',
+'điếc',
+'ghiếc',
+'liếc',
+'nhiếc',
+'tiệc',
+'thiếc',
+'việc',
+'buộc',
+'cuộc',
+'chuốc',
+'đuốc',
+'guốc',
+'giuộc',
+'luộc',
+'nhuốc',
+'tuộc',
+'thuốc',
+'bước',
+'cược',
+'chước',
+'được',
+'khước',
+'nước',
+'ngược',
+'nhược',
+'phước',
+'thước'
+     ],10
  ]
 
 
