--- a/van2.html
+++ b/van2.html
@@ -2561,6 +2561,92 @@ var sentences=
 'phước',
 'thước'
      ],10
+ ],
+['van.mp3', 
+   [
+[372,376],
+[372,376],
+[372,376],
+[372,376],
+[372,376],
+[372,376],
+[372,376],
+[372,376],
+[372,376],
+[372,376],
+[376,380],
+[376,380],
+[376,380],
+[376,380],
+[376,380],
+[376,380],
+[376,380],
+[376,380],
+[376,380],
+[376,380],
+[380,384],
+[380,384],
+[380,384],
+[380,384],
+[380,384],
+[380,384],
+[380,384],
+[380,384],
+[380,384],
+[380,384],
+[391,396],
+[391,396],
+[391,396],
+[391,396],
+[391,396],
+[391,396],
+[391,396],
+[391,396],
+[391,396],
+[391,396]
+   ], 'Vần Phổ Biến 14',
+    [
+'biết',
+'chiết',
+'diệt',
+'giết',
+'kiệt',
+'khiết',
+'nghiệt',
+'nhiệt',
+'phiệt',
+'thiết',
+'yết',
+'quyết',
+'Nam Yết',
+'Yết Hồ',
+'Yết Thất',
+'người Yết',
+'yết hầu',
+'Yết Kiêu',
+'yết vua',
+'yết bảng',
+'buốt',
+'chuột',
+'đuột',
+'luốt',
+'muốt',
+'nuốt',
+'ruột',
+'suốt',
+'tuột',
+'vuốt',
+'khướt',
+'lướt',
+'mượt',
+'phượt',
+'rượt',
+'sướt',
+'tướt',
+'thướt',
+'trượt',
+'vượt'
+     ],10
  ]
 
 
