--- a/van2.html
+++ b/van2.html
@@ -2647,6 +2647,92 @@ var sentences=
 'trượt',
 'vượt'
      ],10
+ ],
+['van.mp3', 
+   [
+[396,399],
+[396,399],
+[396,399],
+[396,399],
+[396,399],
+[396,399],
+[396,399],
+[396,399],
+[396,399],
+[396,399],
+[399,402],
+[399,402],
+[399,402],
+[399,402],
+[399,402],
+[399,402],
+[399,402],
+[399,402],
+[399,402],
+[399,402],
+[402,406],
+[402,406],
+[402,406],
+[402,406],
+[402,406],
+[402,406],
+[402,406],
+[402,406],
+[402,406],
+[402,406],
+[406,410],
+[406,410],
+[406,410],
+[406,410],
+[406,410],
+[406,410],
+[406,410],
+[406,410],
+[406,410],
+[406,410]
+   ], 'Vần Phổ Biến 15',
+    [
+'chiến',
+'điện',
+'ghiền',
+'hiến',
+'khiến',
+'nghiền',
+'nhiên',
+'phiền',
+'thiền',
+'triển',
+'yên',
+'yến',
+'tổ yến',
+'yến sào',
+'chim yến',
+'Yên Nhật',
+'đồng Yên',
+'yên bình',
+'Phú Yên',
+'Yên Bái',
+'buồn',
+'cuốn',
+'chuồn',
+'khuôn',
+'luồn',
+'muốn',
+'nguồn',
+'tuồn',
+'thuôn',
+'uốn',
+'bươn',
+'bươn',
+'lượn',
+'mượn',
+'phưỡn',
+'sườn',
+'thưỡn',
+'trườn',
+'ưỡn',
+'vượn'
+     ],10
  ]
 
 
