--- a/van2.html
+++ b/van2.html
@@ -2733,7 +2733,94 @@ var sentences=
 'ưỡn',
 'vượn'
      ],10
+ ],
+['van.mp3', 
+   [
+[410,414],
+[410,414],
+[410,414],
+[410,414],
+[410,414],
+[410,414],
+[410,414],
+[410,414],
+[410,414],
+[410,414],
+[414,417],
+[414,417],
+[414,417],
+[414,417],
+[414,417],
+[414,417],
+[414,417],
+[414,417],
+[414,417],
+[414,417],
+[417,421],
+[417,421],
+[417,421],
+[417,421],
+[417,421],
+[417,421],
+[417,421],
+[417,421],
+[417,421],
+[417,421],
+[421,425],
+[421,425],
+[421,425],
+[421,425],
+[421,425],
+[421,425],
+[421,425],
+[421,425],
+[421,425],
+[421,425]
+   ], 'Vần Phổ Biến 16',
+    [
+'biếng',
+'chiềng',
+'điếng',
+'giếng',
+'kiễng chân',
+'khiêng',
+'liệng',
+'miệng',
+'nghiêng',
+'thiêng',
+'yêng',
+'yểng',
+'Yêng hùng',
+'Yêng Hồng',
+'chim yểng',
+'Cổ Yểng',
+'Nhồng Yểng',
+'Tử Yếng',
+'Ðồng Yếng',
+'Hai Yếng',
+'buồng',
+'cuống',
+'chuộng',
+'guồng',
+'huống',
+'luống',
+'muỗng',
+'ruộng',
+'thuồng',
+'xuống',
+'chướng',
+'đường',
+'gượng',
+'giường',
+'mường',
+'ngượng',
+'nhường',
+'phường',
+'thưởng',
+'trường'
+     ],10
  ]
+
 
 
 
