--- a/van2.html
+++ b/van2.html
@@ -2819,7 +2819,94 @@ var sentences=
 'thưởng',
 'trường'
      ],10
+ ],
+['van.mp3', 
+   [
+[425,429],
+[425,429],
+[425,429],
+[425,429],
+[425,429],
+[425,429],
+[425,429],
+[425,429],
+[425,429],
+[425,429],
+[429,432],
+[429,432],
+[429,432],
+[429,432],
+[429,432],
+[429,432],
+[429,432],
+[429,432],
+[429,432],
+[429,432],
+[432,436],
+[432,436],
+[432,436],
+[432,436],
+[432,436],
+[432,436],
+[432,436],
+[432,436],
+[432,436],
+[432,436],
+[436,440],
+[436,440],
+[436,440],
+[436,440],
+[436,440],
+[436,440],
+[436,440],
+[436,440],
+[436,440],
+[436,440]
+   ], 'Vần Phổ Biến 17',
+    [
+'chiếm',
+'khiêm',
+'niềm',
+'nghiệm',
+'nhiễm',
+'phiếm',
+'tiêm',
+'thiểm',
+'viêm',
+'xiêm',
+'yểm',
+'yếm',
+'Quần yếm',
+'Váy yếm',
+'cái yếm',
+'Trấn yểm',
+'Cảnh Yểm',
+'Yểm bùa',
+'Chim yểm',
+'yểm trợ',
+'buồm',
+'cuỗm',
+'chuôm',
+'luộm',
+'muỗm',
+'nuốm',
+'nhuốm',
+'ruộm',
+'thuộm',
+'xuộm',
+'bướm',
+'cườm',
+'chườm',
+'đượm',
+'gươm',
+'hướm',
+'lườm',
+'nườm',
+'rướm',
+'tươm'
+    ],10
  ]
+
 
 
 
