--- a/van2.html
+++ b/van2.html
@@ -2905,6 +2905,52 @@ var sentences=
 'rướm',
 'tươm'
     ],10
+ ],
+['van.mp3', 
+   [
+[440,444],
+[440,444],
+[440,444],
+[440,444],
+[440,444],
+[440,444],
+[440,444],
+[440,444],
+[440,444],
+[440,444],
+[444,448],
+[444,448],
+[444,448],
+[444,448],
+[444,448],
+[444,448],
+[444,448],
+[444,448],
+[444,448],
+[444,448]
+   ], 'Vần Phổ Biến 18',
+    [
+'chiếp',
+'diệp',
+'điệp',
+'hiếp',
+'kiếp',
+'khiếp',
+'nghiệp',
+'nhiếp',
+'tiếp',
+'thiệp',
+'ướp',
+'ướp thịt',
+'bướp',
+'cướp',
+'chượp',
+'mướp',
+'nượp',
+'nườm nượp',
+'tướp',
+'tươm tướp'
+    ],10
  ]
 
 
