--- a/van2.html
+++ b/van2.html
@@ -2951,8 +2951,93 @@ var sentences=
 'tướp',
 'tươm tướp'
     ],10
+ ],
+['van.mp3', 
+   [
+[448,451],
+[448,451],
+[448,451],
+[448,451],
+[448,451],
+[448,451],
+[448,451],
+[448,451],
+[448,451],
+[448,451],
+[451,454],
+[451,454],
+[451,454],
+[451,454],
+[451,454],
+[451,454],
+[451,454],
+[451,454],
+[451,454],
+[451,454],
+[454,456],
+[454,456],
+[454,456],
+[454,456],
+[454,456],
+[454,456],
+[454,456],
+[454,456],
+[454,456],
+[454,456],
+[456,459],
+[456,459],
+[456,459],
+[456,459],
+[456,459],
+[456,459],
+[456,459],
+[456,459],
+[456,459],
+[456,459]
+   ], 'Vần Phổ Biến 19',
+    [
+'boa',
+'choa',
+'góa',
+'hỏa',
+'khóa',
+'lóa',
+'ngoa',
+'tòa',
+'thỏa',
+'xoá',
+'chòe',
+'hoe',
+'khỏe',
+'lòe',
+'ngóe',
+'nhòe',
+'ọe',
+'toe',
+'tóe',
+'xòe',
+'duệ',
+'huề',
+'khuê',
+'nhuệ',
+'suê',
+'tuệ',
+'thuế',
+'uế',
+'uể',
+'xuể',
+'khuy',
+'lũy',
+'ngụy',
+'nhụy',
+'súy',
+'tùy',
+'thủy',
+'trụy',
+'úy',
+'xúy'
+    ],10
  ]
-
 
 
 
