--- a/van2.html
+++ b/van2.html
@@ -3037,7 +3037,94 @@ var sentences=
 'úy',
 'xúy'
     ],10
+ ],
+['van.mp3', 
+   [
+[459,462],
+[459,462],
+[459,462],
+[459,462],
+[459,462],
+[459,462],
+[459,462],
+[459,462],
+[459,462],
+[459,462],
+[465,469],
+[465,469],
+[465,469],
+[465,469],
+[465,469],
+[465,469],
+[465,469],
+[465,469],
+[465,469],
+[465,469],
+[469,474],
+[469,474],
+[469,474],
+[469,474],
+[469,474],
+[469,474],
+[469,474],
+[469,474],
+[469,474],
+[469,474],
+[474,478],
+[474,478],
+[474,478],
+[474,478],
+[474,478],
+[474,478],
+[474,478],
+[474,478],
+[474,478],
+[474,478]
+   ], 'Vần Phổ Biến 20',
+    [
+'choai',
+'doãi',
+'đoái',
+'hoại',
+'khoái',
+'loài',
+'ngoái',
+'nhoài',
+'oải',
+'thoải',
+'hoáy',
+'khoáy',
+'loay',
+'loay hoay',
+'ngoáy',
+'nghí ngoáy',
+'nhoáy',
+'toáy',
+'tí toáy',
+'xoáy',
+'choác',
+'chích choác',
+'đoác',
+'hoác',
+'trống hoác',
+'khoác',
+'áo khoác',
+'ngoạc',
+'toạc',
+'xoạc',
+'đoạt',
+'hoạt',
+'hoạt bát',
+'khoát',
+'dứt khoát',
+'loạt',
+'soát',
+'toát',
+'thoát',
+'xoạt'
+    ],10
  ]
+
 
 
 
