--- a/van2.html
+++ b/van2.html
@@ -3123,7 +3123,54 @@ var sentences=
 'thoát',
 'xoạt'
     ],10
+ ],
+['van.mp3', 
+   [
+[478,482],
+[478,482],
+[478,482],
+[478,482],
+[478,482],
+[478,482],
+[478,482],
+[478,482],
+[478,482],
+[478,482],
+[482,486],
+[482,486],
+[482,486],
+[482,486],
+[482,486],
+[482,486],
+[482,486],
+[482,486],
+[482,486],
+[482,486]
+   ], 'Vần Phổ Biến 21',
+    [
+'doãn',
+'đoán',
+'hoãn',
+'khoản',
+'loạn',
+'ngoan',
+'oán',
+'soạn',
+'toán',
+'thoán',
+'choáng',
+'đoảng',
+'hoảng',
+'khoáng',
+'loãng',
+'nhoáng',
+'soạng',
+'toang',
+'thoáng',
+'xoàng'
+    ],10
  ]
+
 
 
 
