--- a/van2.html
+++ b/van2.html
@@ -3169,7 +3169,54 @@ var sentences=
 'thoáng',
 'xoàng'
     ],10
+ ],
+['van.mp3', 
+   [
+[486,491],
+[486,491],
+[486,491],
+[486,491],
+[486,491],
+[486,491],
+[486,491],
+[486,491],
+[486,491],
+[486,491],
+[491,495],
+[491,495],
+[491,495],
+[491,495],
+[491,495],
+[491,495],
+[491,495],
+[491,495],
+[491,495],
+[491,495]
+   ], 'Vần Phổ Biến 22',
+    [
+'chuẩn',
+'huấn',
+'khuẩn',
+'luận',
+'nhuận',
+'tuấn',
+'thuần',
+'truân',
+'uẩn',
+'xuân',
+'chuyền',
+'huyền',
+'khuyên',
+'luyến',
+'nguyện',
+'suyễn',
+'tuyển',
+'thuyền',
+'truyện',
+'xuyến'
+    ],10
  ]
+
 
 
 
