--- a/van2.html
+++ b/van2.html
@@ -3215,7 +3215,62 @@ var sentences=
 'truyện',
 'xuyến'
     ],10
+ ],
+['van.mp3', 
+   [
+[495,499],
+[495,499],
+[495,499],
+[495,499],
+[495,499],
+[495,499],
+[495,499],
+[495,499],
+[499,503],
+[499,503],
+[499,503],
+[499,503],
+[499,503],
+[499,503],
+[499,503],
+[499,503],
+[503,507],
+[503,507],
+[503,507],
+[503,507],
+[503,507],
+[503,507],
+[503,507],
+[503,507]
+   ], 'Vần Phổ Biến 23',
+    [
+'buýt',
+'huýt',
+'nguýt',
+'suýt',
+'suỵt',
+'tuýt',
+'xuỵt',
+'xuýt',
+'choắt',
+'hoắt',
+'khoắt',
+'loắt',
+'ngoắt',
+'ngoặt',
+'oắt',
+'thoắt',
+'khuất',
+'luật',
+'suất',
+'tuất',
+'thuật',
+'truất',
+'uất',
+'xuất'
+    ],8
  ]
+
 
 
 
