--- a/van2.html
+++ b/van2.html
@@ -3269,7 +3269,78 @@ var sentences=
 'uất',
 'xuất'
     ],8
+ ],
+['van.mp3', 
+   [
+[507,511],
+[507,511],
+[507,511],
+[507,511],
+[507,511],
+[507,511],
+[507,511],
+[507,511],
+[511,516],
+[511,516],
+[511,516],
+[511,516],
+[511,516],
+[511,516],
+[511,516],
+[511,516],
+[516,520],
+[516,520],
+[516,520],
+[516,520],
+[516,520],
+[516,520],
+[516,520],
+[516,520],
+[520,524],
+[520,524],
+[520,524],
+[520,524],
+[520,524],
+[520,524],
+[520,524],
+[520,524]
+   ], 'Vần Phổ Biến 23',
+    [
+'duyệt',
+'huyết',
+'khuyết',
+'nguyệt',
+'tuyệt',
+'tuyết',
+'thuyết',
+'xuyết',
+'doanh',
+'hoành',
+'hoánh',
+'khoanh',
+'khoảnh',
+'ngoảnh',
+'oành',
+'toanh',
+'huynh',
+'huỳnh',
+'khuynh',
+'khuỳnh',
+'luýnh',
+'quỳnh',
+'quýnh',
+'uýnh',
+'huých',
+'huỵch',
+'huỳnh huỵch',
+'cú huých',
+'ngã huỵch',
+'uỵch',
+'uỳnh uỵch',
+'Xăng Uých'
+    ],8
  ]
+
 
 
 
