--- a/van2.html
+++ b/van2.html
@@ -3304,7 +3304,7 @@ var sentences=
 [520,524],
 [520,524],
 [520,524]
-   ], 'Vần Phổ Biến 23',
+   ], 'Vần Phổ Biến 24',
     [
 'duyệt',
 'huyết',
@@ -3338,6 +3338,60 @@ var sentences=
 'uỵch',
 'uỳnh uỵch',
 'Xăng Uých'
+    ],8
+ ],
+['van.mp3', 
+   [
+[524,528],
+[524,528],
+[524,528],
+[524,528],
+[524,528],
+[524,528],
+[524,528],
+[524,528],
+[528,532],
+[528,532],
+[528,532],
+[528,532],
+[528,532],
+[528,532],
+[528,532],
+[528,532],
+[532,536],
+[532,536],
+[532,536],
+[532,536],
+[532,536],
+[532,536],
+[532,536],
+[532,536]
+   ], 'Vần Phổ Biến 25',
+    [
+'hoẵng',
+'khoắng',
+'loăng',
+'ngoẵng',
+'ngoằng',
+'nhoằng',
+'oẳng',
+'thoắng',
+'ngoàm',
+'ngoạm',
+'nhoam',
+'nhoàm',
+'nhồm nhoàm',
+'nhoạm',
+'xoàm',
+'xồm xoàm',
+'ngoáp',
+'ngoáp ngủ',
+'ngoáp ngoải',
+'ngoam ngoáp',
+'oạp',
+'ì oạp',
+'oàm oạp',
+'ộp oạp'
     ],8
  ]
 
