--- a/van2.html
+++ b/van2.html
@@ -440,7 +440,63 @@ var sentences=
 [890,891],
 [233,236],
 [326,330],
-[333,337]
+[333,337],
+     [890,890],
+[890,890],
+[192,196],
+[95,99],
+[159,163],
+[53,57],
+[890,890],
+[212,216],
+[323,326],
+[230,233],
+[37,41],
+[240,244],
+[159,163],
+[67,70],
+[83,87],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[192,196],
+[95,99],
+[159,163],
+[890,890],
+[196,200],
+[67,70],
+[212,216],
+[177,180],
+[177,180],
+[180,184],
+[75,79],
+[890,890],
+[333,337],
+[91,95],
+[890,890],
+[91,95],
+[196,200],
+[890,890],
+[192,196],
+[95,99],
+[367,372],
+[134,138],
+[341,345],
+[890,890],
+[236,240],
+[890,890],
+[67,70],
+[180,184],
+[890,890],
+[282,285],
+[216,220],
+[890,890],
+[236,240],
+[341,345],
+[890,890],
+[192,196],
+[95,99]
 
    ], 'Con cú khôn ngoan',
     [
@@ -480,7 +536,63 @@ var sentences=
 'ra',
 'xung',
 'quanh',
-'mình.'
+'mình.',
+     'Có',
+'khi',
+'nhìn',
+'thấy',
+'một',
+'cậu',
+'bé',
+'đang',
+'giúp',
+'ông',
+'lão',
+'xách',
+'một',
+'cái',
+'túi',
+'to,',
+'có',
+'khi',
+'nó',
+'nhìn',
+'thấy',
+'một',
+'cô',
+'con',
+'gái',
+'đang',
+'cằn',
+'nhằn,',
+'giận',
+'dỗi',
+'mẹ',
+'mình.',
+'Ngày',
+'qua',
+'ngày,',
+'con',
+'cú',
+'nhìn',
+'thấy',
+'được',
+'rất',
+'nhiều',
+'thứ',
+'nhưng',
+'nó',
+'lại',
+'vẫn',
+'giữ',
+'im',
+'lặng',
+'về',
+'những',
+'điều',
+'nó',
+'nhìn',
+'thấy.' 
 
      ],8
 
