--- a/van2.html
+++ b/van2.html
@@ -496,7 +496,98 @@ var sentences=
 [341,345],
 [890,890],
 [192,196],
-[95,99]
+[95,99],
+     [75,79],
+[196,200],
+[890,890],
+[180,184],
+[180,184],
+[70,75],
+[151,155],
+[204,208],
+[890,890],
+[333,337],
+[99,103],
+[29,33],
+[890,890],
+[91,95],
+[159,163],
+[890,890],
+[187,192],
+[159,163],
+[204,208],
+[95,99],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[236,240],
+[362,367],
+[70,75],
+[491,495],
+[29,33],
+[70,75],
+[354,358],
+[890,890],
+[91,95],
+[196,200],
+[890,890],
+[200,204],
+[478,482],
+[95,99],
+[890,890],
+[95,99],
+[159,163],
+[354,358],
+[890,890],
+[890,890],
+[70,75],
+[79,83],
+[67,70],
+[890,890],
+[216,220],
+[890,890],
+[159,163],
+[196,200],
+[70,75],
+[91,95],
+[890,890],
+[212,216],
+[37,41],
+[159,163],
+[91,95],
+[99,103],
+[196,200],
+[890,890],
+[67,70],
+[890,890],
+[367,372],
+[159,163],
+[354,358],
+[173,177],
+[230,233],
+[70,75],
+[79,83],
+[67,70],
+[890,890],
+[216,220],
+[333,337],
+[890,890],
+[196,200],
+[354,358],
+[478,482],
+[37,41],
+[33,37],
+[37,41],
+[890,890],
+[109,113],
+[67,70],
+[67,70],
+[258,262],
+[890,890]
 
    ], 'Con cú khôn ngoan',
     [
@@ -592,7 +683,98 @@ var sentences=
 'điều',
 'nó',
 'nhìn',
-'thấy.' 
+'thấy.',
+      'Rồi',
+'con',
+'cú',
+'dần',
+'dần',
+'nói',
+'ít',
+'hơn',
+'và',
+'thính',
+'giác',
+'của',
+'nó',
+'ngày',
+'một',
+'trở',
+'nên',
+'tốt',
+'hơn.',
+'Bây',
+'giờ',
+'thì',
+'nó',
+'có',
+'thể',
+'nghe',
+'rõ',
+'những',
+'cuộc',
+'nói',
+'chuyện',
+'của',
+'mọi',
+'người.',
+'Một',
+'ngày',
+'con',
+'cú',
+'khôn',
+'ngoan',
+'ấy',
+'nghe',
+'thấy',
+'một',
+'người',
+'phụ',
+'nữ',
+'nói',
+'với',
+'ai',
+'đó',
+'rằng',
+'có',
+'một',
+'con',
+'voi',
+'nhảy',
+'qua',
+'hàng',
+'rào.',
+'Một',
+'ngày',
+'khác,',
+'con',
+'cú',
+'lại',
+'nghe',
+'được',
+'một',
+'người',
+'đàn',
+'ông',
+'nói',
+'với',
+'ai',
+'đó',
+'rằng',
+'mình',
+'là',
+'con',
+'người',
+'hoàn',
+'hảo,',
+'chưa',
+'bao',
+'giờ',
+'mắc',
+'phải',
+'sai',
+'lầm',
+'gì.'
 
      ],8
 
